package ar.edu.utn.frba.dds.tpa.estadisticas.models.entities;

public enum Estado {
  PENDIENTE,
  ACEPTADA,
  RECHAZADA,
  RECHAZADA_POR_SPAM
}
