package ar.utn.ba.ddsi.fuenteProxy.models.entities.hechos;

import lombok.Getter;
import lombok.Setter;

@Setter
@Getter
public class Etiqueta {
  //DATA CLASS
  private String nombre;
}